NPDIIUT-26 Collapse issue fix

--- a/src/main/html/css/md-swagger.css
+++ b/src/main/html/css/md-swagger.css
@@ -392,6 +392,7 @@
 }
 .swagger-section .container {
   padding: 0px !important;
+  width: auto;
 }
 .swagger-section .info_title,
 .swagger-section .info_description {
