--- a/src/main/less/swagger.less
+++ b/src/main/less/swagger.less
@@ -14,6 +14,7 @@
 }
 .swagger-section .container {
   padding: 0px !important;
+  width:auto;
 }
 
 .swagger-section .info_title, .swagger-section .info_description {
